# Test_contractor-identity-portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROMPT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/emails/: route.ts
app/api/users/: route.ts
src/democompany_identities/: __init__.py  __main__.py  cli.py  client.py  config.py  csv_exporter.py  emailing.py  logging_config.py  models.py  portal_api.py  service.py  transform.py  web_actions.py
tests/: test_client.py  test_csv_exporter.py  test_emailing.py  test_transform.py
